--- a/index.html
+++ b/index.html
@@ -1,34 +1,29 @@
-<!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+<head>
     <meta charset="utf-8">
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <script src="assets/js/jquery.min.js" type="text/javascript" charset="utf-8" async defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
-  </head>
-  <body>
+    <!-- <link rel="stylesheet" type="text/css" href="assets/css/all.min.css"> -->
+</head>
+  <body data-gr-c-s-loaded="true">
     <header>
       <div class="inner-width">
-        <a href="#" class="logo"><img src="logo.png" alt=""></a>
+       
         <i class="menu-toggle-btn fas fa-bars"></i>
-        <nav class="navigation-menu">
+        <nav class="navigation-menu logo">
           <a href="#"><i class="fas fa-home home"></i> Home</a>
           <a href="#"><i class="fas fa-align-left about"></i> About</a>
           <a href="#"><i class="fab fa-buffer works"></i> Works</a>
+          <img src="assets/images/logo.png" alt=""> 
           <a href="#"><i class="fas fa-users team"></i> Team</a>
-          <a href="#"><i class="fas fa-headset contact"></i> Contact</a>
+          <a href="#"><i class="fas fa-headset contact"></i> Contact</a><a href="#"><i class="fas fa-headset contact"></i> Contact</a>
         </nav>
       </div>
     </header>
 
-
-    <script type="text/javascript">
-      $(".menu-toggle-btn").click(function(){
-        $(this).toggleClass("fa-times");
-        $(".navigation-menu").toggleClass("active");
-      });
-    </script>
-  </body>
+    <script src="assets/js/header.js" type="text/javascript" charset="utf-8" async defer></script>
+</body>
 </html>
