--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         </nav>
       </div>
     </header>
+    <section>
+      
+      
+    </section>
+
 
     <script src="assets/js/header.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
